[workspace]
resolver = "2"

members = ["day-*", "www"]

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
rstest = "0.18.2"
divan = "0.1.3"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"
dhat = "0.3.2"

[profile.flamegraph]
inherits = "release"
debug = true

[profile.dhat]
inherits = "release"
debug = 1

# Defines a size-optimized profile for the WASM bundle in release mode
[profile.wasm-release]
inherits = "release"
opt-level = 'z'
lto = true
codegen-units = 1
panic = "abort"
